# calendar-schedule-cosmic

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  com.bogdart.CalendarSchedule.json  justfile
.github/workflows/: flatpak-repo.yml  release.yml
debian/: changelog  control  copyright  rules
i18n/de/: cosmic_calendar_schedule.ftl
i18n/en/: cosmic_calendar_schedule.ftl
i18n/es/: cosmic_calendar_schedule.ftl
i18n/fr/: cosmic_calendar_schedule.ftl
i18n/ja/: cosmic_calendar_schedule.ftl
i18n/pt-BR/: cosmic_calendar_schedule.ftl
i18n/ru/: cosmic_calendar_schedule.ftl
i18n/uk/: cosmic_calendar_schedule.ftl
i18n/zh-CN/: cosmic_calendar_schedule.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  calendar.rs  calendar_view.rs  config.rs  formatting.rs  main.rs  weather.rs  widgets.rs
